# NWS

./: README.md
javascript/: nws.html
src/: nws.py  pyproject.toml
terminal/: nws.py
web/: buttons.html  index.php  nws.manifest  nws.py
