[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "*.py"
]

[project]
name = "NWS_latest"
version = "v2024.01.09.1"
dependencies = ["pytz" ,"tzlocal"]
authors = [{ name="Nicola Ferralis", email="feranick@hotmail.com" },]
description = "Retrieve latest National Weather Service data for a specific station"
readme = "../README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
nws = "nws:nws"

[project.urls]
Homepage = "https://github.com/feranick/NWS"
Issues = "https://github.com/feranick/NWS/issues"
